[workspace]
resolver = "2"
members = [
  "client",
  "fuzzer",
  "messages",
  "provider",
  "zcashd-process",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
derive_more = "0.99.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
tempfile = "3.8.0"
tokio = { version = "1.33.0", features = ["rt", "macros"] }
zcashd-rpc-messages = { path = "./messages" }
zcashd-rpc-provider = { path = "./provider" }
zcashd-zcashd-process = { path = "./zcashd-process" }
