[package]
name = "zcashd-rpc-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
derive_more.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
zcashd-rpc-messages.workspace = true
zcashd-rpc-provider.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
zcashd-regtest-controller.workspace = true
